<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.stu.careers_search_engine.Login"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <ImageView
            android:id="@+id/IMG_main_logo"
            android:src="@drawable/main_logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="60dp"
            />

        <TextView
            android:id="@+id/TV_title"
            android:text="@string/title"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/IMG_main_logo"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="30sp"
           >

        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/ET_username"
            android:hint="@string/enter_username"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"

            />

        <EditText
            android:id="@+id/ET_password"
            android:hint="@string/enter_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/border"
            android:inputType="textPassword"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/BTN_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
           />
        <TextView
            android:id="@+id/TV_sign_up"
            android:text="@string/sign_up"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="25dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/TV_forgot_details"
            android:textColor="@color/black"
            android:text="@string/forgot_details"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="60dp"
            android:layout_marginRight="25dp"
            android:textSize="20sp"
            />


</RelativeLayout>

</LinearLayout>