...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:id="@+id/home_layout"
    tools:context="com.stu.careers_search_engine.Home"
    android:background="@color/white">



    <RelativeLayout
...
